# object-detection-sptam

./: .gitignore  .gitmodules  CMakeCache.txt  CaffeTargets.cmake  Dockerfile  FromMaxwellToOther.dockerfile  Makefile  README.md  _config.yml  cmake_install.cmake  index.md
CMakeFiles_asd/: CMakeRuleHashes.txt  Makefile.cmake  Makefile2  TargetDirectories.txt  a.out
CMakeFiles_asd/3.5.1/: CMakeSystem.cmake
CMakeFiles_asd/3.8.0/: CMakeCCompiler.cmake  CMakeCXXCompiler.cmake
CMakeFiles_asd/3.8.0/CompilerIdC/: a.out
CMakeFiles_asd/3.8.0/CompilerIdCXX/: a.out
CMakeFiles_asd/lint.dir/: build.make
CMakeFiles_asd/symlink_to_build.dir/: build.make
caffe-fast-rcnn/cmake/: CaffeConfig.cmake
caffe-fast-rcnn/py-caffe-rcnn/: CaffeConfig.cmake
cmake/: CMakeCache.txt.remove  Cuda.cmake
data/caffeModels/: getCaffeModel.sh  pose_coco_Allconst_iter16000.caffemodel
dependencies/: getApproxMVBB.sh  getG2o.sh
dependencies/ApproxMVBB/: Makefile  cmake_install.cmake
dependencies/ApproxMVBB/example/: Makefile  cmake_install.cmake
dependencies/ApproxMVBB/lib/: approxmvbb-config.cmake  cmake_install.cmake  libApproxMVBBForTestsOnly.so.2.0.1
dependencies/ApproxMVBB/tests/: ApproxMVBBTests-Diameter  ApproxMVBBTests-DiameterOOBB  ApproxMVBBTests-MVBB  CTestTestfile.cmake  cmake_install.cmake
dependencies/ApproxMVBB2/ApproxMVBB/: CMakeCache.txt  CTestTestfile.cmake  install_manifest.txt
dependencies/pugixml/src/: pugiconfig.hpp
docs/: Makefile  cmake_install.cmake
examples/: Makefile  cmake_install.cmake
examples/cifar10/: convert_cifar_data
examples/cpp_classification/: classification
examples/mnist/: convert_mnist_data
examples/siamese/: convert_mnist_siamese_data
include/caffe/layers/: python_layer.hpp
include/caffe/util/: cudnn.hpp
matlab/: Makefile  cmake_install.cmake
py-caffe-rcnn/: Makefile.config.jetson  caffe_config.h
py-faster-rcnn/caffe-fast-rcnn/: LICENSE  Makefile  Makefile.config.example
py-faster-rcnn/caffe-fast-rcnn/cmake/: Cuda.cmake  Dependencies.cmake
py-faster-rcnn/cfgs/: faster_rcnn_coco.yml  faster_rcnn_oneh.yml  faster_rcnn_posenet.yml
py-faster-rcnn/lib/: setup.py
py-faster-rcnn/lib/datasets/: datasets
py-faster-rcnn/lib/fast_rcnn/: config.py  fast_rcnn  test.py  test.py.orig  test_m.py  train.py
py-faster-rcnn/lib/nms/: nms
py-faster-rcnn/lib/pycocotools/: _mask.c  pycocotools
py-faster-rcnn/lib/roi_data_layer/: roi_data_layer
py-faster-rcnn/lib/rpn/: rpn
py-faster-rcnn/lib/transform/: transform
py-faster-rcnn/lib/utils/: utils
py-faster-rcnn/scripts/: faster_coco_refinepose.sh  faster_coco_test.sh  faster_rcnn_cocopose.sh  faster_rcnn_end2end.sh  faster_rcnn_endmod.sh  faster_rcnn_endmod_mixed.sh  faster_rcnn_oneh.sh  faster_rcnn_pose.sh  faster_rcnn_test.sh  test_pose.sh
py-faster-rcnn/tools/: demo.backup.py  demo.py  demo_modelnet.py  demo_modelpose.py  demo_onehot.py
python/: Makefile  cmake_install.cmake
python/caffe/: _caffe.cpp
ros/dl_node/: CMakeLists.txt  package.xml
ros/dl_node/msg/: Detection.msg  DetectionList.msg  DetectionWithPose.msg  DetectionWithPoseList.msg
ros/dl_node/src/: _init_paths.py  _init_paths_softnms.py  dl_node.imageout.py  dl_node_sptam.py  dl_pose_node.py  rcnn.py  rcnn_pascal.py  rcnn_pose.py
ros/ros-utils/: CMakeLists.txt  package.xml
ros/ros-utils/src/: odom_to_imu.cpp  odom_to_pose.cpp  poseWithCovariance_to_ellipsoid.cpp  pose_to_odom.cpp  pose_to_path.cpp
ros/sptam/: CMakeLists.txt  README.md  tesina.lyx
ros/sptam/cmake-modules/: options.cmake
ros/sptam/configurationFiles/: KITTI00_right.yaml  bumblebee.yaml  euroc_gftt_brief.yaml  euroc_gftt_brisk.yaml  euroc_odroid_gftt_brief.yaml  euroc_odroid_gftt_brisk.yaml  euroc_odroid_orb.yaml  euroc_odroid_orb_brisk.yaml  euroc_odroid_star_brief.yaml  euroc_orb.yaml  euroc_orb_brief.yaml  fantasy_cam.yaml  firefly.yaml  kitti.yaml  kitti_agast_brief.yaml  kitti_agast_latch.yaml  kitti_akaze.yaml  kitti_brisk.yaml  kitti_fast_brisk.yaml  kitti_gftt_brisk.yaml  kitti_gftt_latch.yaml  kitti_gftt_lucid.yaml  kitti_star_brief.yaml  kitti_star_brisk.yaml  kitti_star_latch.yaml  kitti_surf.yaml  level7.yaml  mit.yaml  rawseedBicocca.yml  sfu.yaml  tsukuba.yaml  zed_vga.yaml
ros/sptam/launch/: bumblebee.launch  bumblebee_test.launch  dl_2vrep.launch  dl_gdb_vrep.launch  dl_mit.launch  dl_vrep.launch  dl_zed.launch  dl_zed_debug.launch  euroc.launch  frog.launch  kitti.launch  kitti_gdb.launch  mit.launch  mobius_sptam.launch  msf.launch  pioneer.launch  sptam.launch  tara_sptam.launch  zed_bag.launch
ros/sptam/msg/: StereoKFwithPose.msg
ros/sptam/plotters/: latexHelpers.py  plot-KITTI-benchmark.py  plot-covariances.py  plot-errors.py  plot-level7.py  plot-level7_orb_sptam.py  plot-mit.py  plot-pioneer.py  plot-prediction.py  plot-slam-methods.py  plot-tracker-errors.py  sg_filter.py  sptam_parser.py
ros/sptam/scripts/: add_camera_info_to_rosbag.py  concatseq.py  error_derivative.py  kitti-benchmark.sh  rename_sptam_logs.sh  tsukuba_ground_truth_converter.py
ros/sptam/src/standAlone/Test/FrustumCulling/: CMakeLists.txt  frustum_test.cpp
ros/sptam/src/standAlone/Test/covariance/: CMakeLists.txt  test-covariance.cpp
ros/sptam_copy/configurationFiles/: euroc_star_brisk.yaml  kitti_agast_brisk.yaml  kitti_fast_brief.yaml  kitti_fast_latch.yaml
ros/sptam_copy/src/standAlone/Test/ReadImagesFromDir/: CMakeLists.txt
ros/sptam_copy/src/standAlone/Test/distributed feature detection/: CMakeLists.txt
ros/sptam_old/: CMakeLists.txt  CMakeLists.txt.orig  Doxyfile  README.md  README.txt  TODO.txt  package.xml
ros/sptam_old/src/standAlone/Test/BundleAdjustment/: BAThread.cpp  CMakeLists.txt
ros/sptam_old/src/standAlone/Test/opencv3_feature_extraction/: CMakeLists.txt
src/caffe/: Makefile  cmake_install.cmake
src/gtest/: Makefile  cmake_install.cmake
tools/: Makefile  caffe  cmake_install.cmake  compute_image_mean  convert_imageset  device_query  extract_features  finetune_net  net_speed_benchmark  test_net  train_net  upgrade_net_proto_binary  upgrade_net_proto_text  upgrade_solver_proto_text
(+469 files in other folders)
